--- a/scott-1980/scott-1980.tex
+++ b/scott-1980/scott-1980.tex
@@ -25,6 +25,7 @@ bookmarksopenlevel=10
 \usepackage{mathpartir}
 \usepackage[bb=pazo]{mathalpha}
 \usepackage{stmaryrd}
+\usepackage{microtype}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -62,6 +63,9 @@ bookmarksopenlevel=10
 \def\l{\lambda}
 \def\lm#1.#2{\lambda#1.\, #2}
 \def\br#1{[\, #1 \, ]}
+\def\V{\mathcal V}
+\def\lxy{\l x\, \l y . \,}
+\def\lmm#1#2.#3{\l #1\, \l #2 . \, #3}
 
 \title{Relating Theories of the $\lambda$-Calculus}
 \author{Dana Scott \\
@@ -82,12 +86,12 @@ Mathematical theories arise for many different reasons, sometimes in connection 
 
 
 Everyone agrees that $\l$-calculus is a theory of functions.
-But we must ask: ``What kind of a theory?'' And also: ``Have we got the best theory?'' Personally, I think we should also in­quire: ``How does it relate to other theories?'' I certainly find many discussions far too silent on this last issue. Well, what other theories are there? Certainly set theory comes to mind at once, and no set theory would be worth its salt if it did not provide a theory of functions. Let us not try to catalogue the various known theories here but look at a theory in the style of Zermelo --- and we do not have even to be too specific, since in any case such a theory is very standard. What is ``unsatisfactory'' about Zermelo's theory is the limiti­zation-of-size view of sets: any {\it one} set $A$ is extremely small compared to the size of $V$, the class or universe of all sets. Thus, functions $f : A \to B$ mapping one set $A$ into another set $B$ tell us very little about operations on all sets, maps on $V$ into $V$. We therefore have an urge to ``improve'' our set theory by constructing a class theory. Sets are elements $A \in V$; while classes are sub-collections $B \subseteq V$. As $V$ is (by the usual assump­tions) so highly closed under so many operations, we have no difficulty in construing certain classes as maps $F: V \to V$. For example for all $X \in V$ we could have $F(X) = \{X\}$ or $F(X) = A \times X$ (where $A$ is a fixed set).
+But we must ask: ``What kind of a theory?'' And also: ``Have we got the best theory?'' Personally, I think we should also in­quire: ``How does it relate to other theories?'' I certainly find many discussions far too silent on this last issue. Well, what other theories are there? Certainly set theory comes to mind at once, and no set theory would be worth its salt if it did not provide a theory of functions. Let us not try to catalogue the various known theories here but look at a theory in the style of Zermelo --- and we do not have even to be too specific, since in any case such a theory is very standard. What is ``unsatisfactory'' about Zermelo's theory is the limiti­zation-of-size view of sets: any {\it one} set $A$ is extremely small compared to the size of $\V$, the class or universe of {\it all} sets. Thus, functions $f : A \to B$ mapping one set $A$ into another set $B$ tell us very little about operations on all sets, maps on $\V$ into $\V$. We therefore have an urge to ``improve'' our set theory by constructing a class theory. Sets are elements $A \in \V$; while classes are sub-collections $B \subseteq \V$. As $\V$ is (by the usual assump­tions) so highly closed under so many operations, we have no difficulty in construing certain classes as maps $F: \V \to \V$. For example for all $X \in \V$ we could have $F(X) = \{X\}$ or $F(X) = A \times X$ (where $A$ is a fixed set).
 
-The passage from sets to classes is a familiar and useful move in the formalization of the theory: many things can be done generally for classes and then specialized to sets. And having a notation for functions defined on all sets is in many cases a great advantage. But wait. What about operations on classes? What should we say about them? Given any two classes $A$ and $B$, we can form their union, $A \union  B$. The operation, $\union\!: V \times V \to V$, of union of {\it sets} does not directly apply to {\it classes} even though there is a connection. Do we also want a theory of class operations? Do we have to go to hyperclasses (classes of classes)? Is there any end to this expansion?
+The passage from sets to classes is a familiar and useful move in the formalization of the theory: many things can be done generally for classes and then specialized to sets. And having a notation for functions defined on all sets is in many cases a great advantage. But wait. What about operations on classes? What should we say about them? Given any two classes $A$ and $B$, we can form their union, $A \union  B$. The operation, $\union\!: \V \times \V \to \V$, of union of {\it sets} does not directly apply to {\it classes} even though there is a connection. Do we also want a theory of class operations? Do we have to go to hyperclasses (classes of classes)? Is there any end to this expansion?
 
 
-[{\it An Aside}: The story of Scott (1980) was meant to suggest one answer --- the one known to Plotkin (1972). Namely, we con­sider only ``continuous'' class operations. These are objects $F$ such that $F(X)$ is defined for every class $X \subseteq V$ and $F(X)$ is a class, too. Moreover $F$ should satisfy:
+[{\it An Aside}: The story of Scott (1980) was meant to suggest one answer --- the one known to Plotkin (1972). Namely, we con­sider only ``continuous'' class operations. These are objects $F$ such that $F(X)$ is defined for every class $X \subseteq \V$ and $F(X)$ is a class, too. Moreover $F$ should satisfy:
 
 \begin{enumerate}
 
@@ -97,27 +101,27 @@ The passage from sets to classes is a familiar and useful move in the formalizat
 
 \end{enumerate}
 %
-We do not have time to discuss the justification of the word "continuous" here; suffice it to say that conditions (1) and (2) are not as strict as they at first might seem. Every ordinary map $f : V \to V$ determines a continuous class operator by the def­inition:
+We do not have time to discuss the justification of the word "continuous" here; suffice it to say that conditions (1) and (2) are not as strict as they at first might seem. Every ordinary map $f : \V \to \V$ determines a continuous class operator by the def­inition:
 
 $$
 F(X) = \{f(x) \mid x \in X\}.
 $$
 %
 Furthermore, $F$ determines $f$, for we have: $y = f(x)$ if and only if $\{y\} = F(\{x\})$,
-for all $x,y \in V$. In a suitable sense, then, nothing has been lost; but what has been gained?
+for all $x,y \in \V$. In a suitable sense, then, nothing has been lost; but what has been gained?
 The reply is that continuous class operators can be identi­fied with classes. We could write, for instance:
 
-$$ F = \{(A,B) \mid A,B \in V {\textrm { and }} A \inc F(B) \},$$
+$$ F = \{(A,B) \mid A,B \in \V {\textrm { and }} A \inc F(B) \},$$
 where, say:
 
 $$
 (A,B) = \{\{A\}, \{A,B\}\},
 $$
-More in harmony with Scott (1980) would be: $F = \{(a,B) \mid  a,B \in V {\textrm { and } } a \in F(B)\}$.
+More in harmony with Scott (1980) would be: $F = \{(a,B) \mid  a,B \in \V {\textrm { and } } a \in F(B)\}$.
 
 Either trick reduces operator theory to class theory - in the continuous case. And the same trick could be carried over to other kinds of set theory (e.g. Quine's). What we know is that operator theory gives a model for $\l$-calculus; it is a quite elementary model, too. Nice as this connection is, it is not the topic of the pre­ sent paper: we do not want to make $\l$-calculus depend on set theory, since then we have still to explain where set theory comes from. But the connection should be borne in mind.]
 
-Perhaps set theory brings in too many extraneous issues. $V$, after all, is a massive object closed under all manner of strange operations. What we are probably seeking is a ``purer'' view of functions: a theory of functions in themselves, not a theory of functions derived from sets. What, then, is a pure theory of functions? Answer: category theory. General category theory is a very pure theory: it is the milk-and-water theory of functions under composition. This composition operation is associative and possesses neutral ele­ments (compositions of zero terms). That is about all you can say about it except to stress that it is also a rather bland theory of types. Every function $f$ has a (unique) domain and codomain, and we write:
+Perhaps set theory brings in too many extraneous issues. $\V$, after all, is a massive object closed under all manner of strange operations. What we are probably seeking is a ``purer'' view of functions: a theory of functions in themselves, not a theory of functions derived from sets. What, then, is a pure theory of functions? Answer: category theory. General category theory is a very pure theory: it is the milk-and-water theory of functions under composition. This composition operation is associative and possesses neutral ele­ments (compositions of zero terms). That is about all you can say about it except to stress that it is also a rather bland theory of types. Every function $f$ has a (unique) domain and codomain, and we write:
 
 $$f: \dom f \to \cod f$$
 %
@@ -135,7 +139,7 @@ $$
   {{f: A \to B} \\ {g: B \to C}}
   {g \comp f: A \to C}
 $$
-with the understanding that the typing of $f \comp  g$ can only be ob­ tained by such an application of the rule. The types, then, are invoked just to type functions, and the only theory involv­ed is that of the ``transition'' of types under composition. 
+with the understanding that the typing of $f \comp  g$ can only be ob­tained by such an application of the rule. The types, then, are invoked just to type functions, and the only theory involv­ed is that of the ``transition'' of types under composition. 
 
 Sets (and set-theoretical mappings) do of course form a cat­egory; category theory is meant to be more general than set theory. We should construe the function entities here as tri­ples of sets $(A,f,B)$ where
 $$
@@ -166,7 +170,7 @@ I am trying to find out where $\l$-calculus should come from, and the fact that 
 I say "a theory", because there are many possible theories; indeed pure category theory is one of the theories. 
 Its weak­ness lies in the fact that we are given no construction principles, no way of making new types from old. From the point of view of logic what should we expect? What more do we want to say beyond relations between types which hold when a mapping statement $f : A\to	B$ obtains.
 
-An immediate question that must come to anyone's mind con­cerns the arity of functions. The usual way of reading a map­ping statement is to take it as a statement about {\it one-place} functions, and the $\circ$ of composition is the composition of one­ place functions. This seems very restricted.
+An immediate question that must come to anyone's mind con­cerns the {\it arity} of functions. The usual way of reading a map­ping statement is to take it as a statement about {\it one-place} functions, and the $\circ$ of composition is the composition of one­ place functions. This seems very restricted.
 
 People have suggested generalizing categories to multi-place functions with concomitant compositions (e.g. the book Szabo (1978)), but it does not seem the neatest solution. Much easier is to assume that the category has cartesian products - and more specifically particular representatives of the product
 domains are chosen. As a special case we will know what the cartesian power $A^n$ is for each $n=0,1,2,\cdots$, and $n$-ary functions
@@ -306,6 +310,117 @@ But remember, a theory is not a model: the maps in a given
 \ccc\ are not concrete maps, they are just the definable maps in the language of the theory, and the equations between them are the ``theorems'' of the theory. It is no surprise that a given theory may not have enough definable elements: we may need to expand the stock of elements in order to have a model. For a \ccc\ we find we can. So far, so good; and this is the (known) story of typed $\l$-calculus.
 
 \section{``Type Free'' Domains}
+
+In the paper of Lambek, the analogy between typed and type­ free is illustrated (in the obvious way), but no real connec­ tion or relation is established. This we shall now do, and the relationship will be deepened in the next section.
+In the first place, we shall only consider the $\l$-calculus (or $\l K$-calculus) and not the $\l \eta$-calculus; the latter can be re­ garded as a special case. What is needed is a notion of do­main appropriate to the interpretation of the "type-free" cal­culus.
+
+In a category, a retraction between two domains $A$ and $B$ is a pair of maps $i: A	\to B$ and $j : B \to A$ where $j \comp i = \id_A$. Regard $A$ as the "smaller" domain; it is injected into $B$, and $B$ is sur­jectively mapped onto $A$. The notion shares qualities, then, of $A$ being both a subspace of $B$ and at the same time a quotient.
+But the injection and surjection have to be related.
+
+Now, suppose that in a cartesian closed category a domain $U$ satisfies the condition that the function space $(U\to U)$ is a retract of the domain $U$ itself. (This is always so for $U = \bbone$, but we seek non-trivial examples.) Let the retraction maps be $i: (U \to U) \to U$ and $j : U \to (U \to U)$. Then $U$ (as it sits in its category) gives us an interpretation of the type-free cal­culus, which we now explain.
+Let the type-free terms be constructed in the usual way from variables $x,y,z, \dots$ by means of application and $\l$-abstraction.
+Think of all variables as being of type $U$ and define a translation $\tau^*$ from untyped terms to typed terms so that
+\begin{align*}
+x^* &= x, \\
+(\tau(\sigma))^* &= j(\tau^*)(\sigma^*),\\
+(\lm{x}.\tau)^* &= i(\lm{x}.\tau^*).
+\end{align*}
+We intend this in such a way that $\tau^*$ is always of type $U$. The type-free theory (determined by the category, the domain $U$, and by the choice of $i$ and $j$) has as its assertions exactly those equations $\tau = \sigma$ where $\tau^* = \sigma^*$ in the category. The theory satisfies $(\alpha)$, $(\beta)$-conversion-conversion, all the rules of equality, and the rule $\xi$: from $\tau = \sigma$ to deduce $\l x .\, \tau = \l x .\, \sigma$. This much is surely obvious to anyone reading Lambek's paper.
+
+What I would like to point out here is the converse: given any type-free theory, there is a \ccc\ and a domain $U$ (with a suitable retraction pair $i,j$) so that the above interpretation gives exactly the same type-free theory. Consequently, nothing is lost in considering type-free theories just as special parts of typed theories. I do not find this result mentioned by Lam­bek.
+
+The proof is elementary. Let the domains for the category be the $\l$-terms $A$, without free variables, for which we can prove in the theory:
+$$
+A = \lm{x}. A(A(x)).
+$$
+The maps $f: A\to B$ are terms $f$ without free variables for which we can prove
+$$
+f = \lm{x}. B(f(A(x))).
+$$
+The equations between maps are the equations we can prove in the theory. [Actually, it might be better to construe maps as triples $(A,f,B)$, but never mind.] It is not hard to show that this is a category where
+\begin{align*}
+\id_A &= A, {\textrm{ and}}\\
+f \comp g &= \lm{x}. f(g(x)).
+\end{align*}
+[More properly spoken, the maps should be equivalence classes of terms based on the equations of theory, but never mind.]
+To show this construction gives a \ccc\ we need to define:
+$$
+A \times B = \lmm{u}{z}.z(A(u(\lxy x))) (B(u(\lxy y))).
+$$
+where
+\begin{align*}
+p_{AB} &= \lm{u}. (A \times B)(u)(\lxy x),\\
+q_{AB} &= \lm{u}. (A \times B)(u)(\lxy y),
+\end{align*}
+%
+and if $f:C\to A$ and $g: C\to B$ then
+$$
+\langle f,g \rangle = \lmm{t}{z}.z(f(t))(g(t)).
+$$
+All of this is based on the familiar pairing functions of $\l$-calculus.
+
+For function spaces, we define
+$$
+A \to B = \lm{f}. B \comp f \comp A.
+$$
+where
+$$
+\ebc = \lm{u}. C(u(\lxy x)(B(u(\lxy y)))).
+$$
+and
+$$
+\L_{ABC}\, h = \lxy h(\lm{z}. z(x)(y)).
+$$
+provided $h: (A \times B) \to C$.
+
+There are a jolly lot of equations to verify, but the work is all straight-forward conversion. The method of retracts as a \ccc\ has in any case been exposed before with respect to the $P\omega$ model in Scott (1976). Note here, however, we are to verify the required equations in a theory (not a model) making use of nothing but the ``logical'' axioms of $\l$-calculus.
+
+It remains to identify the domain $U$ in the constructed cate­gory. We define:
+$$
+U = \lm{x}. x\, .
+$$
+Clearly
+$$
+U = \lm{x}.U(U(x)) = U \comp U .
+$$
+Note that every A in the category is a retract of U; indeed, for retractions define $A : A \to U$ and $A: U\to A$ and
+$$
+A \comp A = A = \id_A.
+$$
+We thus speak of these A's also as retractions. We can write: 
+$$
+(U\to U) = \lmm{x}{f}. f(x),
+$$
+and it is thus easy to verify now that $(U\to U)$ is a retraction of $U$. As $U$ is in fact the identity function, the reinterpre­tation via $U$ of the type-free calculus will obviously translate every term into itself.
+I just note in writing down the definition of the \ccc, I
+forgot to define $\bbone$ --- because it is so dull, I suppose! For this we have to map everything onto a constant:
+\begin{align*}
+\bbone &= \lmm{u}{x}.x, {\textrm{ and}} \\
+\zeromap &= \bbone
+\end{align*}
+I think the calculations suggested provide an argument that the type-free $\l$-calculus takes {\it second} place to typed $\l$-calculus --- foundationally speaking. Type-free domains are \emph{special kinds} of types. As I have said before in other writings, to get $(U \to U)$ inside $U$, we have to pass to an {\it infinite} type. I thought this was made very clear in the so-called $D_{\infty}$-construction. The category of \emph{continuous lattices and continuous func­tions} is a \ccc. Starting with any domain $D_0$, in that cate­gory the sequence of types $D_n$ where $D_{n+l} =  (D_n \to D_x)$  has a certain limit $D$ with $D_O$ (and all the $D$'s) as retracts, and with $(D_\infty \to D_\infty)$ not only a retract but an isomorph of $D_\infty$
+That is one choice of an $U$, and I showed many variations are possible for other type-free domains $U$ in this one category.
+
+We hasten to note that in the \ccc\ of {\it sets and arbitrary functions}, a non-trivial domain $U$ with $(U\to U)$ a retract is im­possible (by cardinality considerations). This means that not all \ccc\ lead directly to interpretations of the type-free theory. Hence, we must conclude, {\it the typed theory is the more general one, and the prior one}.
+
+Such a conclusion will not be welcome, however. The type­ free theory from our experience seems general enough. Even though we have shown two good ways of relating the two kinds of theories, we would like something more. We do not want just some \ccc\ related to a given type-free theory, but we would like to find a relation that achieved any desired \ccc, pro­vided we cook up the type-free one properly. This problem is the topic of the next section.
+
+Before we turn to this new relationship, a word about {\it models} of the type-free calculus would be to the point. There is con­siderable discussion of the notion of a model in Hindley and Longo (1980) and Barendregt (1980) (where other references are given). We should state how this all fits in with the present view.
+
+When presenting a theory in the usual $\l$-notation, free vari­ables are permitted as well as full use of the rule ($\xi$). But, when thinking of elements (relative to a theory) only terms (better: equivalence classes of terms) {\it without free variables} should be considered. As is known from many examples, there may not be enough of them. This can of course be so even if we
+allow in our language many non-logical constants. What does
+``enough'' mean? Well, if f and g are closed terms, it may be
+that $f(a) = g(a)$ is provable for all closed $a$, but $f = g$ is not provable. The fact that this happens for some theories should come as no surprise. (For the explicit examples consult Baren­ dregt (1980).)
+
+The remedy is to adjoin indeterminates (constants without
+new axioms) until ``enough'' is reached. (A proof is also found
+in Barendregt (1980).) As with the typed calculus, every the­ ory has a model which satisfies exactly the same equations as
+are provable in the theory (one might call it a conservative
+model).
+The notion of a A-mode l has not struck people as quite satisfactory because the extensionality principle in the ``enough'' clause is not very algebraic. A suggestion of mine is mention­ ed in the cited references, but I think it would be useful to recast the idea in the light of the present discussion.
+
+In typed $\l$-calculus, the categorical formulation is one way of eliminating all use of variables. In type-free $\l$-calculus, the usual plan is to use the combinators - and the plan leads to awfully long formulae, Let us not try to give a variable­ free formulation, but talk in terms of first-order models.
+What is unalgebraic in the model definition is the $\l$-operator, since a bound variable is of the essence of the use of $\l$, So let us replace $\l$ by the combinators in the usual way. We take $S$ and $K$ as primitive, and a $\l$-model is (at least), a structure of the form $\langle U, \cdot(\cdot), S, K\rangle>$ with a domain, a binary operation, and two distinguished constants, The problem is: {\it what are the axioms}? Clearly we want:
 
 
 
