scott up to page 18

--- a/scott-1980/scott-1980.tex
+++ b/scott-1980/scott-1980.tex
@@ -33,6 +33,7 @@ bookmarksopenlevel=10
 \usepackage{mathtools}
 \usepackage{tikz-cd}
 \usepackage{amssymb}
+\usepackage{fdsymbol}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -85,6 +86,8 @@ bookmarksopenlevel=10
 \def\ssn{(**_n)}
 \def\scop{\S^{\C^{op}}}
 \def\PU{\mathcal P U}
+\def\P{\mathcal P}
+\DeclareRobustCommand{\mm}{\Assert}
 
 \title{Relating Theories of the $\lambda$-Calculus}
 \author{Dana Scott \\
@@ -724,6 +727,54 @@ $$
 whenever $g: C\to B$, then the $\sigma_A$ so defined from them provides a
 natural transformation. Again, we see the elements of $\PU$ are rather special. We can say that elements of a functor provide
 information about the ``global'' nature of the functor; but this is far from determining it, for there can be considerable ``lo­cal'' activity that cannot be sensed globally. For example, the sets UB can be empty for a long ``time'', only becoming non­ empty in the "future". The functor $U$ is non trivial, but it has no global elements.
+
+We should also pause to see why the functor $H$ maps $\C$ into a 
+subcartesian closed category of $\scop$ (up to isomorphism). It
+is easy to check that the functors $H_A \times H_B$ and $H_{A \times B}$ are naturally isomorphic. We also have to do the same for $(H_A \to H_B)$ and $H_{A \to B}$. Consider an element of $(H_A\to H_B)_C$. It is a family of maps
+$$
+\phi_f : H_A(D) \to H_B(D)
+$$
+for $f: D\to C$. In particular consider the standard maps
+$p:	(C x A) \to C$ and $q : (C x A)\to A$. 
+Then $\phi_p(q) : (C \times A)\to B$.
+So, since $\C$ is a \ccc, we find $\L\phi_p(q) \in (H_{A \to B})_C$. In the
+other direction, let $t : C\to (A \to B)$.
+Define $\tau_f$ for $f : D\to C$ by
+$$
+(\tau_f)(g) = \ev \comp \langle t \comp f \comp k, g \comp k \rangle
+$$
+where $g : D \to A$. We see this lies in $H_B(D)$. Now
+$$
+\ev \comp \langle t \comp f, g\rangle \comp k = \ev \comp \langle t \comp f \comp k, g \comp k\rangle
+$$
+whenever $k: E \to D$. Thus,
+$$
+(\tau f)(g) \res k = \tau_{f \comp k}(g \res k).
+$$
+This proves that the family $\tau_f$ lies in $(H_A \to H_B)_C$. It has to be left without proof that these two correspondences are in­ verse to one another and provide a natural isomorphism.
+
+Well, this is a rather heavy construction starting from one little category $\C$. The question: what does it prove? Why worry about the functor category? The answer is that the func­tors give an interpretation of higher-order logic, as we hinted earlier, and now we have to pay up and demonstrate
+how to con­strue logical formulae. The idea from topos theory when spe­cialized to the functor category looks very much like Kripke models of intuitionistic logic - except that the ``times'' form a category $\C$ rather than just a partially ordered set, as has often been emphasized by Lawvere (see, e.g. Lawvere (1975)).
+
+To make the logical language more definite, let us think of the domains $A$ in $\C$ as being (in a one-one correspondence with) type symbols. Introduce new type symbols built from the ones
+in $\C$ (the "ground" types) by forming $\bbone$, $(T \times S)$, $(T\to S)$, $\P T$ for all type symbols. (Note: $A \times B$ in $\C$ is being distinguished
+from the type symbol $A \times B$. But the "meaning" of the symbol
+$A\times B$ will turn out to be something ``isomorphic'' to $A\times B$ in $\C$. The trouble is that the domain $A \times B$ does not in itself deter­mine the $A$ and the $B$; whereas the type symbol does.) We extend the notation $H_A$ to $H_T$ for any type symbol in the obvious way;
+that is, $H_{T \times S}$ is the product $H_T \times H_S$ in the functor category. This is the first step in treating the functor category as an interpretation of a higher-order theory.
+
+Next we must imagine a logical language with a supply of variables of each type. Atomic formulae will be of these
+forms: $\bot$; $x = y$, where $x$ and $y$ have the same type; $y = f x$
+where $f$ is a constant symbol corresponding to a map $f: A	\to B$ in $\C$ and $x$ has type $A$ and $y$ type $B$; $z = (x,y)$ where $x$ has type $T$, $y$ type $S$, $z$ type $T \times S;$ $z = x(y)$, where $z$ has type $S$, $y$ has type $T$ and $x$ type $(S \to T)$; $y \in x$ where $y$ has type $T$ and $x$ type $\P T$. Atomic formulae are then made into compound formulae by the usual constructs: $\Phi \land \Psi$, $\Phi \lor \Psi$, $\Phi \to \Psi$, $\forall x. \, \Phi$, $\exists x. \, \Psi$.
+
+
+Suppose $A$ is a domain of $\C$, $\Phi$ is a formula, and $s$ is a valu­ation of the free variables of $\Phi$. We are going to define what Joyal-Reyes (1980) call the {\it forcing-satisfaction} relation $A \mm \Phi[s]$. The definition here will be in one respect simpler
+than theirs since the category $\C$ carries no topology; in an­ other respect it is more complicated because we have the whole higher-order language. But the adaptation is straight forward. Before we can give the clauses, we must say what kind of a creatures is. We must make $s$ relative to $A$ in the first place. So if $x$ has type $T$, then $s(x)$ is to belong to the set $H_T(A)$. Now here are the clauses:
+\begin{align*}
+\end{align*}
+
+
+
+
 
 \section{Type-Free Domains Revisited}
 
