--- a/scott-1980/scott-1980.tex
+++ b/scott-1980/scott-1980.tex
@@ -33,7 +33,7 @@ bookmarksopenlevel=10
 \usepackage{mathtools}
 \usepackage{tikz-cd}
 \usepackage{amssymb}
-\usepackage{fdsymbol}
+%\usepackage{fdsymbol}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -87,7 +87,7 @@ bookmarksopenlevel=10
 \def\scop{\S^{\C^{op}}}
 \def\PU{\mathcal P U}
 \def\P{\mathcal P}
-\DeclareRobustCommand{\mm}{\Assert}
+\def\mm{\mathrel {||}\joinrel \relbar}
 
 \title{Relating Theories of the $\lambda$-Calculus}
 \author{Dana Scott \\
