--- a/scott-1980/scott-1980-pal-eu.tex
+++ b/scott-1980/scott-1980-pal-eu.tex
@@ -20,7 +20,7 @@ bookmarksopenlevel=10
 %\usepackage[osf]{XCharter}% lining figures in math, osf in text
 %\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[bb=pazo,cal=cm,scr=esstix]{mathalpha}
-%\usepackage{eulervm}
+\usepackage{eulervm}
 
 \usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
