--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -59,7 +59,7 @@
 \maketitle
 \bigskip
 {\centerline
-{\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday}}
+{\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday\footnote{This is a remake of the paper {\it Relating Theories of the $\l$-Calculus} originally published in In R. Hindley and J. Seldin, editors, To H.B. Curry: essays in Combinarory Logic, lambda calculus and Formalisms. Academic Press, 1980. This file was created in May 2021.}}}
 \bigskip
 
 \medskip
@@ -158,7 +158,7 @@ are then maps $f: A^n\to B$. Not much of a surprise.
 
 We have to take care, however. In the first place, a given category may not have cartesian products (it fails to have enough types). Even if it does, the maps allowed may be too restricted - for logical purposes. Take the category of groups and homomorphisms, for example. The required products exist.
 A map $f : A^2 \to B$ in this category has to be a group homomor­phism, naturally. Suppose two maps $u,v: \AB$ were given.
-Intuitively we think in terms of elements and that we are map­ping $x \mapsto u(x)$ and $y \mapsto v(y)$. The pointwise group product of the maps, namely, $x,y \mapsto  u(x) \cdot v(y)$ is a very nice map $g : A^2 \to B$ in the ordinary sense --- but unless the group $B$ is abelian, $g$ is not a homomorphism. It is a ``logical'' map but not an ``algebra­ic'' map. Pure category theory applies to many algebraic situa­tions (as everyone knows that is why it is a good theory), but not all categories are ``logical'' even if they have products. In the example of groups, what was "missing" was the group
+Intuitively we think in terms of elements and that we are map­ping $x \mapsto u(x)$ and $y \mapsto v(y)$. The pointwise group product of the maps, namely, $x,y \mapsto  u(x) \cdot v(y)$ is a very nice map $g : A^2 \to B$ in the ordinary sense --- but unless the group $B$ is abelian, $g$ is not a homomorphism. It is a ``logical'' map but not an ``algebra­ic'' map. Pure category theory applies to many algebraic situa­tions (as everyone knows that is why it is a good theory), but not all categories are ``logical'' even if they have products. In the example of groups, what was ``missing'' was the group
 multiplication $\mu: B^2 \to B$ as a map in the category. (Inverse is missing as well, since it reverses order.) There is an in­teresting theory of algebraic theories that address the ques­tion of the proper categorial construction of categories of al­gebras, but I do not think we should invoke that theory here.
 
 The precise description of products is as follows. We as­sume our category has a special domain $\bbone$ (the empty product, so $A^0 = B^0 = {\bbone}$), and for each domain $A$ a special map $\zeromap_A: A \mapsto \bbone$. (The domain $\bbone$, intuitively, has just one ``element''.)  Moreover the rule about maps is that $\zeromap_A$ is unique; that is whenever $f : A \mapsto \bbone$, then we have the equation
@@ -935,7 +935,7 @@ Though we did not prove such a sweeping result, we did sketch a proof of:
 
 \item {\it Every given \ccc\  can be realized fully and faithfully as a category of subtypes of a reflexive type in a higher-order theory.}
 
-We did not work out the cartesian closed details of this as­sertion but contented ourselves with showing how to accomodate a finite number of types. By the way, it should be remarked that 4 and 5 hold for an arbitrary (small) category, so in par­ ticular we have the (known) result that every category can be conservatively extended to a \ccc\  The method of proof for 5 was via the author's original construction of A-calculus mod­ els, which can be conveniently carried out in the category of
+We did not work out the cartesian closed details of this as­sertion but contented ourselves with showing how to accomodate a finite number of types. By the way, it should be remarked that 4 and 5 hold for an arbitrary (small) category, so in par­ ticular we have the (known) result that every category can be conservatively extended to a \ccc\  The method of proof for 5 was via the author's original construction of $\l$-calculus mod­els, which can be conveniently carried out in the category of
 ``injective'' $T_0$-spaces. There are many variations on this con­struction, and it might be interesting to see how different the different categories with reflexive domains really are from the point of view of higher-order logic.
 
 Another remark: the construction has many connections with {\it Curry's Theory of Functionality} (i.e. the problem of finding other \ccc's inside a $\l$-calculus model). But as I have in­dicated several times it is really better to work with equiva­lence relations (on subtypes of a reflexive domain $U$) because
