--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -1,3 +1,4 @@
+% !TEX root = scott-1980.tex
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
@@ -59,7 +60,7 @@
 \maketitle
 \bigskip
 {\centerline
-{\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday\footnote{This is a remake of the paper {\it Relating Theories of the $\l$-Calculus} originally published in In R. Hindley and J. Seldin, editors, To H.B. Curry: essays in Combinarory Logic, lambda calculus and Formalisms. Academic Press, 1980. This file was created in May 2021.}}}
+{\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday\footnote{This is a remake of the paper {\it Relating Theories of the $\l$-Calculus} originally published in In R. Hindley and J. Seldin, editors, To H.B. Curry: Essays in Combinarory Logic, Lambda Calculus and Formalisms. Academic Press, 1980. This file was created in May 2021.}}}
 \bigskip
 
 \medskip
@@ -955,30 +956,30 @@ and they are satisfied in certain topoi. It would be an impor­tant next step fo
 
 \begin{thebibliography}{86}
 
-\bibitem[1]{1} Barendregt, H., (1980). ``The Lambda Calculus: its Syntax and Semantics'', North-Holland, Amsterdam, to appear.
+\bibitem[1]{1} Barendregt, H., (1980). {\it The Lambda Calculus: its Syntax and Semantics}, North-Holland, Amsterdam, to appear.
 
-\bibitem[2]{2} Engeler, E., (1979).  Algebras and combinators, preprin,t ETH Zllrich.
+\bibitem[2]{2} Engeler, E., (1979).  {\it Algebras and combinators}, preprint ETH Zllrich.
 
-\bibitem[3]{3} Gierz, G., Hofmann, K.H., Keimel, K., Lawson, J.D., Mislove, M., and Scott, D.S., (1980). "A Compendium of Continuous Lattices", Springer-Verlag, Heidelberg, to appear.
+\bibitem[3]{3} Gierz, G., Hofmann, K.H., Keimel, K., Lawson, J.D., Mislove, M., and Scott, D.S., (1980). {\it A Compendium of Continuous Lattices}, Springer-Verlag, Heidelberg, to appear.
 
-\bibitem[4]{4} Goldblatt, R., (1979). ``Topoi: The Categorial Analysis of Logic'', North-Holland, Amsterdam.
+\bibitem[4]{4} Goldblatt, R., (1979). {\it Topoi: The Categorial Analysis of Logic}, North-Holland, Amsterdam.
 
-\bibitem[5]{5} Hindley, R., and Longo, G., (1980). Lambda calculus models and extensionality, Math. Logik u. Grundl. d. Math, to appear.
+\bibitem[5]{5} Hindley, R., and Longo, G., (1980). {\it Lambda calculus models and extensionality}, Math. Logik u. Grundl. d. Math, to appear.
 Johnstone, P., (1977). "Topos Theory", London Math. Soc.
 Monographs No. 10, Academic Press, London.
 
-\bibitem[6]{6} Joyal, A., and Reyes, G.E., (1980). Forcing and generic models in categorical logic, J. Pure and Applied Algebra, to appear.
+\bibitem[6]{6} Joyal, A., and Reyes, G.E., (1980). {\it Forcing and generic models in categorical logic}, J. Pure and Applied Algebra, to appear.
 Lawvere, F.W., (1975). Continuously variable sets: algebraic geometry= geometric logic, In "Logic Colloquium '73", (Eds. H.E. Rose and J.C. Shepherdson), North-Holland, Amsterdam, pp. 135-156.
 
-\bibitem[7]{7} MacLane, S. (1971). ``Categories for the Working Mathematician'', Springer-Verlag, Heidelberg.
+\bibitem[7]{7} MacLane, S. (1971). {\it Categories for the Working Mathematician}, Springer-Verlag, Heidelberg.
 
-\bibitem[8]{8} Plotkin, G. (1972). A set-theoretical definition of application, Memo, MIP-R-95, School of Artificial Intelligence, Univ. of Edinburgh.
+\bibitem[8]{8} Plotkin, G. (1972). {\it A set-theoretical definition of application}, Memo, MIP-R-95, School of Artificial Intelligence, Univ. of Edinburgh.
 Scott, D.S., (1976). Data types as lattices, Siam J. Computing,
 Vol. 5, pp. 522-587.
 
-\bibitem[9]{9} Scott, D.S., (1979). Identity and existence in intuitionistic logic, In "Applications of Sheaves", Springer-Verlag, Lecture Notes in Math. Vol. 753, pp. 660-696.
+\bibitem[9]{9} Scott, D.S., (1979). {\it Identity and existence in intuitionistic logic}, In "Applications of Sheaves", Springer-Verlag, Lecture Notes in Math. Vol. 753, pp. 660-696.
 
-\bibitem[10]{10} Scott, D.S., (1980). Lambda calculus: Some models, some philosophy, In ``The Kleene Symposium'', (Eds. J. Barwise,
+\bibitem[10]{10} Scott, D.S., (1980). {\it Lambda calculus: Some models, some philosophy}, In The Kleene Symposium, (Eds. J. Barwise,
 H.J. Keisler, and K. Kunen), North-Holland, Amsterdam, pp. 381-421.
 Szabo, M.E., (1978). "Algebra of proofs", North-Holland, Amsterdam.
 
